# magpies

./: .buildinfo  .gitignore  Atmos.html  Collection_of_lightcurves.html  Fit_spectra_bb.html  Initialising_surface_thermal_map.html  Lightcurve_two_hot_spots.html  Magpies.html  Phased_resolved_spectroscopy.html  README.md  Simple_example.html  Tutorials.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: Atmos.doctree  Collection_of_lightcurves.doctree  Fit_spectra_bb.doctree  Initialising_surface_thermal_map.doctree  Lightcurve_two_hot_spots.doctree  Magpies.doctree  Phased_resolved_spectroscopy.doctree  Simple_example.doctree  Tutorials.doctree  environment.pickle  index.doctree
.github/workflows/: main.yml
_sources/: Collection_of_lightcurves.rst.txt  Fit_spectra_bb.rst.txt  Initialising_surface_thermal_map.rst.txt  Lightcurve_two_hot_spots.rst.txt  Magpies.rst.txt  Simple_example.rst.txt  index.rst.txt
docs/source/: Atmos.rst  Collection_of_lightcurves.rst  Fit_spectra_bb.rst  Initialising_surface_thermal_map.rst  Lightcurve_two_hot_spots.rst  Magpies.rst  Phased_resolved_spectroscopy.rst  Simple_example.rst  Tutorials.rst  conf.py
examples/: Fit_spectra_limited_photon_count.ipynb  Luminosity_of_neutron_star.ipynb  Simple_example.ipynb  Test_uniform_temperature_distribution.ipynb  example_lightcurve_Poutanen_2020.ipynb  example_spectra_Yakovlev_2021.ipynb
examples/.ipynb_checkpoints/: Fit_spectra_limited_photon_count-checkpoint.ipynb  Luminosity_of_neutron_star-checkpoint.ipynb  (+7 more)
tests/: test_atmos.py
(+3 files in other folders)
